--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@
 					<div class="col-md-12">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -100,10 +97,10 @@
 					<div class="col-md-5 animate-box">
 						<div class="owl-carousel3">
 							<div class="item">
-								<img class="img-responsive about-img" src="images/Hazar Kir 5.JPG" alt="html5 bootstrap template by colorlib.com">
+								<img class="img-responsive about-img" src="images/Hazar Kir 5.JPG" alt="logo">
 							</div>
 							<div class="item">
-								<img class="img-responsive about-img" src="images/Hazar Kir 3.jpg" alt="html5 bootstrap template by colorlib.com">
+								<img class="img-responsive about-img" src="images/Hazar Kir 3.jpg" alt="logo">
 					 		</div>
 						</div>
 					</div>
